# dotwatch

./: .dockerignore  .gitignore  AUDIT_LATEST_ZIP_20260708.md  AUDIT_PHASE4B_MODEL_ADMIN.md  AUDIT_REPORT.md  AUDIT_REPORT_20260713.md  CLEANUP_REPORT_20260710.md  DEPLOYMENT_AND_GITHUB_GUIDE_TH.md  FIRST_IP_LOCK_VALIDATION_REPORT.md  GIT_PUSH_COMMANDS_ALARMS_VALUES_STYLE_TH.txt  GIT_PUSH_COMMANDS_ALARM_COMPACT_HEADER_TH.txt  GIT_PUSH_COMMANDS_ALARM_SINGLE_ROW_TH.txt  GIT_PUSH_COMMANDS_DATA_OVERVIEW_COMPACT_PAIR_TH.txt  GIT_PUSH_COMMANDS_DEVICE_CODE_FONT_PARITY_TH.txt  GIT_PUSH_COMMANDS_DEVICE_MODEL_FIXED_VALUES_TH.txt  GIT_PUSH_COMMANDS_ESP32_MINIMAL_TFT_TH.txt  GIT_PUSH_COMMANDS_LINE_EMAIL_NOTIFICATIONS_TH.txt  GIT_PUSH_COMMANDS_MIGRATION_DEVICE_MODEL_METRICS_DECIMAL_FIX_TH.txt  GIT_PUSH_COMMANDS_PHASE_M8_MOBILE_INTERNAL_BUILD_TH.txt  GIT_PUSH_COMMANDS_PHASE_S2_TH.txt  GIT_PUSH_COMMANDS_PHASE_S3A_TH.txt  GIT_PUSH_COMMANDS_PHASE_S3B_TH.txt  GIT_PUSH_COMMANDS_PHASE_S3_SOFTWARE_CLOSEOUT_TH.txt  GIT_PUSH_COMMANDS_PRODUCTION_RELEASE_AUDIT_FIX_TH.txt  GIT_PUSH_COMMANDS_PRODUCTION_RELEASE_AUDIT_TH.txt  GIT_PUSH_COMMANDS_REMOVE_DUPLICATE_VALUE_CONFIGURATION_TH.txt  GIT_PUSH_COMMANDS_SELECTED_DEVICE_CENTER_LAYOUT_TH.txt  GIT_PUSH_COMMANDS_SELECTED_DEVICE_SECURITY_TH.txt  GIT_PUSH_COMMANDS_SELECTED_DEVICE_VALUES_ALARMS_TABS_TH.txt  GIT_PUSH_COMMANDS_UNIFIED_TYPOGRAPHY_TH.txt  GIT_PUSH_COMMANDS_VALUES_CLEAN_FEEDBACK_TH.txt  GIT_PUSH_COMMANDS_VALUES_OVERVIEW_STYLE_TH.txt  GIT_PUSH_COMMANDS_VALUES_PAIRED_ROWS_TH.txt  GIT_PUSH_COMMANDS_VALUE_VISIBLE_HEADER_TH.txt  INSTALL.txt  (+106 more)
(+1041 files in other folders)
